apps/workloads/open-faas/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas-fn
  labels:
    app: openfaas
