apps/workloads/open-faas/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-web
  namespace: openfaas-fn
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openfaas.lab.markaplay.net`)
      kind: Rule
      services:
      - name: openfaas
        port: 8080
  tls:
    secretName: openfaas-cert
